# Distributed-Word-Count

./: CMakeLists.txt  README.md
src/: chunking.c  chunking.h  distribution_thread.c  distribution_thread.h  hashmap.c  hashmap.h  protocol.c  protocol.h  wordcount.c  wordcount.h  zmq_distributor.c  zmq_worker.c
