cmake_minimum_required(VERSION 3.5)
project(RN-Praxis)
set(CMAKE_C_STANDARD 11)

find_library(ZeroMQ zmq REQUIRED)

add_executable(zmq_distributor 
                    src/zmq_distributor.c 
                    src/protocol.c
                    src/distribution_thread.c
                    src/chunking.c
                    src/hashmap.c
                    src/wordcount.c)
target_include_directories(zmq_distributor PRIVATE src)
target_compile_options(zmq_distributor PRIVATE -Wall -Wextra -Wpedantic)
target_link_libraries(zmq_distributor PRIVATE zmq pthread)

add_executable(zmq_worker 
                    src/zmq_worker.c
                    src/protocol.c
                    src/hashmap.c
                    src/wordcount.c)
target_include_directories(zmq_worker PRIVATE src)
target_compile_options(zmq_worker PRIVATE -Wall -Wextra -Wpedantic)
target_link_libraries(zmq_worker PRIVATE zmq pthread)

# Packaging
set(CPACK_SOURCE_GENERATOR "TGZ")
set(CPACK_SOURCE_IGNORE_FILES 
    ${CMAKE_BINARY_DIR}
    /\\..*$
    \\.pdf$
    /build/
    /test/__pycache__
    \\.tar.gz$
)
set(CPACK_VERBATIM_VARIABLES YES)
include(CPack)
